--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,7 +355,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(55, 142, 181, 0.5), rgba(55, 142, 181, 0.2)), url("../img/hero-bg.jpg") top center;
+  background: linear-gradient(rgba(55, 142, 181, 0.5), rgba(55, 142, 181, 0.2)), url("../img/fondoh.jpg") top center;
   background-size: cover;
   position: relative;
   margin-bottom: -90px;
@@ -959,8 +959,8 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50%;
+  width: 100%;
+  border-radius: 1%;
   margin: 0 auto;
 }
 
